Fixed video dimension issues on tablets

--- a/_assets/scss/patterns/panel.scss
+++ b/_assets/scss/patterns/panel.scss
@@ -31,9 +31,14 @@
             width:      100%;
         }
 
-        video, canvas {
+        video {
+            width:  100%;
+            height: 100%;
+        }
+
+        canvas {
             width: 100%;
-        }        
+        }
     }
 
     .main-content {
